[tool.poetry]
name = "dust3r"
version = "0.1.0"
description = ""
authors = ["unlclearness <unclearness.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
roma = "^1.4.3"
gradio = "^4.19.2"
matplotlib = "^3.8.3"
tqdm = "^4.66.2"
opencv-python = "^4.9.0.80"
scipy = "^1.12.0"
einops = "^0.7.0"
trimesh = "^4.1.7"
tensorboard = "^2.16.2"
pyglet = "^2.0.12"
torch = {version = "^2.2.1+cu121", source = "torch_cu121"}
torchvision = {version = "^0.17.1+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.2.1+cu121", source = "torch_cu121"}
cmake = "^3.28.3"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
